Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


* drop CDEPEND tracking (unused, hold over from '04 days), and
  newdepend (same era).  Neither are used in >=EAPI0 ; if your
  ebuild breaks, rebase the ebulid to a valid EAPI.


pkgcore 0.5.11.3: March 22nd, 2010

* force all einfo/elog/ewarn style bits to stderr.

* add path attribute to ebuild derived pkg instances; not a guranteed
  part of the api yet, but accessible via pquery --attr path


pkgcore 0.5.11.2: March 16th, 2010

* silence spurious grep QA warnings during metadata sourcing.


pkgcore 0.5.11.1: March 15th, 2010

* fix a major release bug; ebuild-env-utils.sh wasn't packaged in the
  released 0.5.11, this version adds the missing file.

* more declare related fixups; this one a regression from 0.5.10- in
  sourcing /etc/profile.env, it's contents weren't being preserved
  fully due to declare.

* add missing eapi3 phase support- basically just reuses eapi2's since
  the only changes are environmental.


pkgcore 0.5.11: March 14th, 2010

* took me a full night of debugging, but traced down yet another portage
  incompatibility introduced.  gentoo bug 303369; if you've been seeing
  issues where portage merged ebuild envs aren't reused in pkgcore, this
  is now fixed.  Env handling in general was heavily rewritten to be as
  robust as possible and protect against any further breakages from portage.

* env processing is a bit faster now- uses egrep where possible, falling
  back to bash regex where not.

* shell scripts now are tabs based rather than spaces.

* FEATURES=splitdebug works once again.

* It's strongly suggested that you run >snakeoil-0.3.6.1 due to fixes
  in extension building- specifically forcing -fno-strict-aliasing back
  into cflags since python is invalidly dropping them out.

  In addition, if you're running pkgcore on a py3k machine, installation