@@ -4,6 +4,8 @@ Pkgcore Release Notes
 See ChangeLog for full commit logs; this is summarized/major changes.
 
 
+* fix py3k regression when trying to hash a PackageRestriction.
+
 * drop CDEPEND tracking (unused, hold over from '04 days), and
   newdepend (same era).  Neither are used in >=EAPI0 ; if your
   ebuild breaks, rebase the ebulid to a valid EAPI.
